page is updated when new announcemnt is added to database

--- a/styles/announcements.css
+++ b/styles/announcements.css
@@ -38,15 +38,12 @@
 
 
 .priority-high{
-    background: red;
-    color: white;
+    color:  red;
 }
 
 .priority-medium{
-    background: yellow;
-    color: dimgray;
+    color: green;
 }
-
 .priority-low{
-    
+
 }
